tests/rosetta/out/Pascal/chat-server.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:36:22Z
program ChatServer;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;

function removeName(names: specialize TArray<string>; name: string): specialize TArray<string>;
var
  out: specialize TArray<string>;
begin
  out := specialize TArray<string>([]);
  for n in names do
  begin
    if (n <> name) then ;
  end;
  result := out;
  exit;
end;

function main(): integer;
var
  clients: specialize TArray<string>;
begin
  clients := specialize TArray<string>([]);
  add('Alice');
  add('Bob');
  send('Alice', 'Hello Bob!');
  send('Bob', 'Hi Alice!');
  remove('Bob');
  remove('Alice');
  broadcast('Server stopping!
');
end;

generic function _appendList<T>(arr: specialize TArray<T>; val: T): specialize TArray<T>;
var i,n: Integer;
begin
  n := Length(arr);
  SetLength(Result, n + 1);
  for i := 0 to n - 1 do
    Result[i] := arr[i];
  Result[n] := val;
end;

begin
  main();
end.
